--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <h1>我的第三个标题</h1>
     <p>我的第三个段落。</p>
     <a href="https://www.baidu.com/" target="_blank">百度</a>
-    <img src="/桌面/html/image/1.gif" width="96" height="72" alt="这是一张图片" />
+    <img src="1.gif" width="96" height="72" alt="这是一张图片" />
 </body>
 </html>
