--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>HTML学习</title>
+    <meta name="Kyewords" content="我,是,易鸿">
 </head>
 <body>
     <h1>我的第一个标题</h1>
