--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             height: 700px;
             /*margin: 20px 100px 20px 100px;*/
             border: none;
-            background-image: url(./image/风景.jpg);
+            background-image: url(风景.jpg);
             background-size: 1300px 700px;
         }
 
