--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         #borderimg {
             border: 80px solid green;
-            border-image: url(./image/胡桃.jpg) 100 round;
+            border-image: url(胡桃.jpg) 100 round;
         }
 
         #box {
@@ -106,7 +106,7 @@
     <div id="container">
         <div align="center">
             <a href="https://top.baidu.com/board" target="_blank">
-                <img src="D:\Visual Studio 2019\html\image\百度.png" alt="点击一下，了解更多" title="点击一下，了解更多">
+                <img src="百度.png" alt="点击一下，了解更多" title="点击一下，了解更多">
             </a>
 
         </div>
@@ -120,7 +120,7 @@
         <div id="box1">
             <div id="film">
                 <video width="520" height="300" controls>
-                    <source src="D:\Visual Studio 2019\html\image\纳西妲PV.mp4" type="video/mp4">
+                    <source src="纳西妲PV.mp4" type="video/mp4">
                 </video>
             </div>
             <div id="others">
@@ -129,7 +129,7 @@
                         <th><ul><li>学习类</li></ul></th>
                         <td>
                             <a href="https://www.lintcode.com/" target="_blank">
-                                <img src="D:\Visual Studio 2019\html\image\LintCode.png">LintCode
+                                <img src="LintCode.png">LintCode
                             </a>
                         </td>
                         <td>
