--- a/index.html
+++ b/index.html
@@ -134,17 +134,17 @@
                         </td>
                         <td>
                             <a href="https://leetcode-cn.com/" target="_blank">
-                                <img src="D:\Visual Studio 2019\html\image\LeetCode.png">LeetCode
+                                <img src="LeetCode.png">LeetCode
                             </a>
                         </td>
                         <td>
                             <a href="https://www.nowcoder.com/" target="_blank">
-                                <img src="D:\Visual Studio 2019\html\image\牛客网.png">牛客网
+                                <img src="牛客网.png">牛客网
                             </a>
                         </td>
                         <td>
                             <a href="https://github.com/" target="_blank">
-                                <img src="D:\Visual Studio 2019\html\image\GitHub.png">GitHub
+                                <img src="GitHub.png">GitHub
                             </a>
                         </td>
                     </tr>
@@ -152,27 +152,27 @@
                         <th><ul><li>影视类</li></ul></th>
                         <td>
                             <a href="https://v.qq.com/" target="_blank">
-                                <img src="D:\Visual Studio 2019\html\image\腾讯视频.png">腾讯视频
+                                <img src="腾讯视频.png">腾讯视频
                             </a>
                         </td>
                         <td>
                             <a href="https://www.iqiyi.com/" target="_blank">
-                                <img src="D:\Visual Studio 2019\html\image\爱奇艺.png">爱奇艺
+                                <img src="爱奇艺.png">爱奇艺
                             </a>
                         </td>
                         <td>
                             <a href="https://www.bilibili.com/" target="_blank">
-                                <img src="D:\Visual Studio 2019\html\image\哔哩哔哩.png">哔哩哔哩
+                                <img src="哔哩哔哩.png">哔哩哔哩
                             </a>
                         </td>
                         <td>
                             <a href="https://www.huya.com/" target="_blank">
-                                <img src="D:\Visual Studio 2019\html\image\虎牙.png">虎牙
+                                <img src="虎牙.png">虎牙
                             </a>
                         </td>
                         <td>
                             <a href="https://www.douyu.com/" target="_blank">
-                                <img src="D:\Visual Studio 2019\html\image\斗鱼.png">斗鱼
+                                <img src="斗鱼.png">斗鱼
                             </a>
                         </td>
                     </tr>
@@ -180,22 +180,22 @@
                         <th><ul><li>购物类</li></ul></th>
                         <td>
                             <a href="https://www.jd.com/" target="_blank">
-                                <img src="D:\Visual Studio 2019\html\image\京东.png">京东
+                                <img src="京东.png">京东
                             </a>
                         </td>
                         <td>
                             <a href="https://www.taobao.com/" target="_blank">
-                                <img src="D:\Visual Studio 2019\html\image\淘宝.png">淘宝
+                                <img src="淘宝.png">淘宝
                             </a>
                         </td>
                         <td>
                             <a href="https://www.tmall.com/" target="_blank">
-                                <img src="D:\Visual Studio 2019\html\image\天猫.png">天猫
+                                <img src="天猫.png">天猫
                             </a>
                         </td>
                         <td>
                             <a href="https://pifa.pinduoduo.com/" target="_blank">
-                                <img src="D:\Visual Studio 2019\html\image\拼多多.png">拼多多
+                                <img src="拼多多.png">拼多多
                             </a>
                         </td>
                     </tr>
@@ -203,12 +203,12 @@
                         <th><ul><li>游戏类</li></ul></th>
                         <td>
                             <a href="http://www.7k7k.com/" target="_blank">
-                                <img src="D:\Visual Studio 2019\html\image\7k7k.png">7k7k
+                                <img src="7k7k.png">7k7k
                             </a>
                         </td>
                         <td>
                             <a href="https://www.4399.com/" target="_blank">
-                                <img src="D:\Visual Studio 2019\html\image\4399.png">4399
+                                <img src="4399.png">4399
                             </a>
                         </td>
                     </tr>
@@ -216,7 +216,7 @@
                         <th><ul><li>社交类</li></ul></th>
                         <td>
                             <a href="https://www.sina.com.cn/" target="_blank">
-                                <img src="D:\Visual Studio 2019\html\image\新浪.png">新浪
+                                <img src="新浪.png">新浪
                             </a>
                         </td>
                     </tr>
@@ -225,11 +225,11 @@
         </div>
         <div id="box2">
             <div id="imgmic">
-                <script src="D:\Visual Studio 2019\html\music.js"></script>
-                <audio id="music" src="D:\Visual Studio 2019\html\image\丘丘谣.mp3">
-                    <!--<source src="D:\Visual Studio 2019\html\image\丘丘谣.mp3" type="audio/mpeg">-->
+                <script src="music.js"></script>
+                <audio id="music" src="丘丘谣.mp3">
+                    <!--<source src="丘丘谣.mp3" type="audio/mpeg">-->
                 </audio>
-                <img src="D:\Visual Studio 2019\html\image\1.gif" onclick="bgaudio()">
+                <img src="1.gif" onclick="bgaudio()">
             </div>
 
             
