--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         #borderimg {
             border: 80px solid green;
             border-image: url(胡桃.jpg) 100 round;
+            border-image:repeat;
         }
 
         #box {
